fix to iconic overflowing

--- a/app/assets/stylesheets/tioki/main.scss
+++ b/app/assets/stylesheets/tioki/main.scss
@@ -35,7 +35,7 @@
 		position: absolute;
 		background: #666;
 		padding: 3px 6px;
-		font-size: 16px;
+		font-size: 12px;
 		color: #FFF;
 		right: 0px;
 		top: 0px;
